--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -3,14 +3,7 @@
     "id": 1,
     "imageUrl": "/project_scrin/analyz.png",
     "title": "text_analysis",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["React", "TypeScript", "Vite", "HTML5", "CSS3"],
     "links": {
       "site": "https://kalachinskii.github.io/text_analysis",
       "git": "https://kalachinskii.github.io/text_analysis"
@@ -20,41 +13,27 @@
     "id": 2,
     "imageUrl": "/project_scrin/red_explorers.png",
     "title": "red_explorers",
-    "texnologys": [{ "name": "HTML/CSS", "link": "html-css" }],
+    "technologies": ["HTML5", "CSS3"],
     "links": {
-      "site": "https://kalachinskii.github.io/Flex/red_explorers",
+      "site": "https://kalachinskii.github.io/Flex/red_explorers/",
       "git": "https://github.com/Kalachinskii/Flex/tree/main/red_explorers"
     }
   },
   {
     "id": 3,
-    "imageUrl": "/project_scrin/analyz.png",
-    "title": "text_analysis",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "imageUrl": "/project_scrin/Deliver_X.png",
+    "title": "Deliver_X",
+    "technologies": ["HTML5", "CSS3"],
     "links": {
-      "site": "https://kalachinskii.github.io/text_analysis",
-      "git": "https://github.com/Kalachinskii/Flex"
+      "site": "https://demo-it-park.ru/kalachinskii/Deliver_X",
+      "git": "https://github.com/Kalachinskii/Deliver_X"
     }
   },
   {
     "id": 4,
     "imageUrl": "/project_scrin/Carolina.png",
     "title": "Carolina’s Hall",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["Bootstrap", "SCSS", "HTML5", "CSS3"],
     "links": {
       "site": "https://kalachinskii.github.io/bootstrapSite",
       "git": "https://github.com/Kalachinskii/bootstrapSite"
@@ -64,14 +43,7 @@
     "id": 5,
     "imageUrl": "/project_scrin/Bhagaskara.png",
     "title": "Bhagaskara",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["JavaScript", "SCSS", "HTML5", "CSS3"],
     "links": {
       "site": "https://kalachinskii.github.io/Bhagaskara",
       "git": "https://github.com/Kalachinskii/Bhagaskara"
@@ -81,14 +53,7 @@
     "id": 6,
     "imageUrl": "/project_scrin/ParalaxEff.png",
     "title": "Paralax-effect",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["JavaScript", "HTML5", "CSS3"],
     "links": {
       "site": "https://kalachinskii.github.io/Paralax-effect",
       "git": "https://github.com/Kalachinskii/Paralax-effect"
@@ -98,13 +63,14 @@
     "id": 7,
     "imageUrl": "/project_scrin/divisima.png",
     "title": "divisima",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
+    "technologies": [
+      "PHP",
+      "MySQL",
+      "REST API",
       "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
+      "Custom Admin Panel",
+      "HTML5",
+      "CSS3"
     ],
     "links": {
       "site": "https://demo-it-park.ru/divisima-shop",
@@ -115,14 +81,7 @@
     "id": 8,
     "imageUrl": "/project_scrin/TimerTask.png",
     "title": "TimerTask",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["React", "JavaScript", "Vite", "HTML5", "CSS3"],
     "links": {
       "site": "https://kalachinskii.github.io/TimerTask",
       "git": "https://github.com/Kalachinskii/TimerTask"
@@ -132,13 +91,14 @@
     "id": 9,
     "imageUrl": "/project_scrin/Smart_task_timer.png",
     "title": "Smart_task_timer",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
+    "technologies": [
       "React",
-      "TypeScript",
-      "Vite"
+      "JavaScript",
+      "Vite",
+      "Swiper.js",
+      "React Countdown Circle Timer",
+      "HTML5",
+      "CSS3"
     ],
     "links": {
       "site": "https://kalachinskii.github.io/-Smart_task_timer",
@@ -149,14 +109,7 @@
     "id": 10,
     "imageUrl": "/project_scrin/Journal.png",
     "title": "Journal",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["React", "JavaScript", "Vite", "HTML5", "CSS3"],
     "links": {
       "site": "https://kalachinskii.github.io/Journal",
       "git": "https://github.com/Kalachinskii/Journal"
@@ -166,14 +119,7 @@
     "id": 11,
     "imageUrl": "/project_scrin/ToDoList.png",
     "title": "To-do-list",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["React", "JavaScript", "HTML5", "CSS3"],
     "links": {
       "site": "https://kalachinskii.github.io/ReactTest_To-do-list",
       "git": "https://github.com/Kalachinskii/ReactTest_To-do-list"
@@ -183,14 +129,7 @@
     "id": 12,
     "imageUrl": "/project_scrin/rusbir.png",
     "title": "rusbir",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["HTML5", "CSS3"],
     "links": {
       "site": "https://kalachinskii.github.io/rusbir",
       "git": "https://github.com/Kalachinskii/rusbir"
@@ -200,14 +139,7 @@
     "id": 13,
     "imageUrl": "/project_scrin/instaboti.png",
     "title": "instaboti",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["HTML5", "CSS3"],
     "links": {
       "site": "https://kalachinskii.github.io/instaboti",
       "git": "https://github.com/Kalachinskii/instaboti"
@@ -217,14 +149,7 @@
     "id": 14,
     "imageUrl": "/project_scrin/addBookList.png",
     "title": "addBookList",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["JavaScript", "HTML5", "CSS3"],
     "links": {
       "site": "https://kalachinskii.github.io/addBookList",
       "git": "https://github.com/Kalachinskii/addBookList"
@@ -234,13 +159,14 @@
     "id": 15,
     "imageUrl": "/project_scrin/aiGeneratorImage.png",
     "title": "ai_generate_image",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
+    "technologies": [
       "TypeScript",
-      "Vite"
+      "React",
+      "Vite",
+      "AI/ML",
+      "Transformers.js",
+      "HTML5",
+      "CSS3"
     ],
     "links": {
       "site": "https://kalachinskii.github.io/test_ai_generate_image",
@@ -251,13 +177,14 @@
     "id": 16,
     "imageUrl": "/project_scrin/React_films_ribbon.png",
     "title": "React_films_ribbon",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
+    "technologies": [
       "React",
-      "TypeScript",
-      "Vite"
+      "JavaScript",
+      "Vite",
+      "Movie API",
+      "Lodash (debounce для поиска)",
+      "HTML5",
+      "CSS3"
     ],
     "links": {
       "site": "https://kalachinskii.github.io/React_films_ribbon",
@@ -268,14 +195,7 @@
     "id": 17,
     "imageUrl": "/project_scrin/landguru.png",
     "title": "landguru",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["HTML5", "CSS3"],
     "links": {
       "site": "https://demo-it-park.ru/kalachinskii/landguru",
       "git": "https://github.com/Kalachinskii/landguru"
@@ -285,34 +205,10 @@
     "id": 18,
     "imageUrl": "/project_scrin/gtp3.png",
     "title": "gtp3",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
+    "technologies": ["Bootstrap", "HTML5", "CSS3"],
     "links": {
       "site": "https://demo-it-park.ru/kalachinskii/gpt-3",
       "git": "https://github.com/Kalachinskii/gpt-3"
-    }
-  },
-  {
-    "id": 19,
-    "imageUrl": "/project_scrin/Deliver_X.png",
-    "title": "Deliver_X",
-    "texnologys": [
-      "HTML5",
-      "CSS3",
-      "JavaScript",
-      "React",
-      "TypeScript",
-      "Vite"
-    ],
-    "links": {
-      "site": "https://demo-it-park.ru/kalachinskii/Deliver_X",
-      "git": "https://github.com/Kalachinskii/Deliver_X"
     }
   }
 ]
