--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -210,5 +210,23 @@
       "site": "https://demo-it-park.ru/kalachinskii/gpt-3",
       "git": "https://github.com/Kalachinskii/gpt-3"
     }
+  },
+  {
+    "id": 19,
+    "imageUrl": "/project_scrin/pizza.png",
+    "title": "Pizza",
+    "technologies": [
+      "TypeScript",
+      "React",
+      "MockAPI",
+      "Redux Toolkit",
+      "React Content Loader",
+      "HTML5",
+      "CSS3"
+    ],
+    "links": {
+      "site": "https://kalachinskii.github.io/_picca",
+      "git": "https://github.com/Kalachinskii/_picca"
+    }
   }
 ]
