--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -2,6 +2,7 @@
   {
     "id": 1,
     "imageUrl": "/project_scrin/analyz.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "text_analysis",
     "technologies": ["React", "TypeScript", "Vite", "HTML5", "CSS3"],
     "links": {
@@ -12,6 +13,7 @@
   {
     "id": 2,
     "imageUrl": "/project_scrin/red_explorers.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "red_explorers",
     "technologies": ["HTML5", "CSS3"],
     "links": {
@@ -22,6 +24,7 @@
   {
     "id": 3,
     "imageUrl": "/project_scrin/Deliver_X.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "Deliver_X",
     "technologies": ["HTML5", "CSS3"],
     "links": {
@@ -32,6 +35,7 @@
   {
     "id": 4,
     "imageUrl": "/project_scrin/Carolina.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "Carolinas Hall",
     "technologies": ["Bootstrap", "SCSS", "HTML5", "CSS3"],
     "links": {
@@ -42,6 +46,7 @@
   {
     "id": 5,
     "imageUrl": "/project_scrin/Bhagaskara.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "Bhagaskara",
     "technologies": ["JavaScript", "SCSS", "HTML5", "CSS3"],
     "links": {
@@ -52,6 +57,7 @@
   {
     "id": 6,
     "imageUrl": "/project_scrin/ParalaxEff.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "Paralax-effect",
     "technologies": ["JavaScript", "HTML5", "CSS3"],
     "links": {
@@ -62,6 +68,7 @@
   {
     "id": 7,
     "imageUrl": "/project_scrin/divisima.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "divisima",
     "technologies": [
       "PHP",
@@ -80,6 +87,7 @@
   {
     "id": 8,
     "imageUrl": "/project_scrin/TimerTask.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "TimerTask",
     "technologies": ["React", "JavaScript", "Vite", "HTML5", "CSS3"],
     "links": {
@@ -90,6 +98,7 @@
   {
     "id": 9,
     "imageUrl": "/project_scrin/Smart_task_timer.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "Smart_task_timer",
     "technologies": [
       "React",
@@ -108,6 +117,7 @@
   {
     "id": 10,
     "imageUrl": "/project_scrin/Journal.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "Journal",
     "technologies": ["React", "JavaScript", "Vite", "HTML5", "CSS3"],
     "links": {
@@ -118,6 +128,7 @@
   {
     "id": 11,
     "imageUrl": "/project_scrin/ToDoList.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "To-do-list",
     "technologies": ["React", "JavaScript", "HTML5", "CSS3"],
     "links": {
@@ -128,6 +139,7 @@
   {
     "id": 12,
     "imageUrl": "/project_scrin/rusbir.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "rusbir",
     "technologies": ["HTML5", "CSS3"],
     "links": {
@@ -138,6 +150,7 @@
   {
     "id": 13,
     "imageUrl": "/project_scrin/instaboti.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "instaboti",
     "technologies": ["HTML5", "CSS3"],
     "links": {
@@ -148,6 +161,7 @@
   {
     "id": 14,
     "imageUrl": "/project_scrin/addBookList.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "addBookList",
     "technologies": ["JavaScript", "HTML5", "CSS3"],
     "links": {
@@ -158,6 +172,7 @@
   {
     "id": 15,
     "imageUrl": "/project_scrin/aiGeneratorImage.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "ai_generate_image",
     "technologies": [
       "TypeScript",
@@ -176,6 +191,7 @@
   {
     "id": 16,
     "imageUrl": "/project_scrin/React_films_ribbon.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "React_films_ribbon",
     "technologies": [
       "React",
@@ -194,6 +210,7 @@
   {
     "id": 17,
     "imageUrl": "/project_scrin/landguru.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "landguru",
     "technologies": ["HTML5", "CSS3"],
     "links": {
@@ -204,6 +221,7 @@
   {
     "id": 18,
     "imageUrl": "/project_scrin/gtp3.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "gtp3",
     "technologies": ["Bootstrap", "HTML5", "CSS3"],
     "links": {
@@ -214,6 +232,7 @@
   {
     "id": 19,
     "imageUrl": "/project_scrin/pizza.png",
+    "imageMiniUrl": "/mini_site_pages/red_explorers.png",
     "title": "Pizza",
     "technologies": [
       "TypeScript",
